[package]
name = "bevy-domino-demo"
version = "1.0.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-tnua = "0.28.0"
bevy-tnua-avian3d = "0.9.0"
avian3d = "0.4.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3